create logic not repeat role