@@ -20,6 +20,7 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -67,7 +68,7 @@ public class UserService {
             return List.of();
         return users.stream()
                 .map(mapper::entityToUserResDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public User findByEmail(String email) {
